# naive-bayes-text-classification

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  extract_dataset.sh
include/: defs.hpp  defs.hpp.gch  doc_preprocessor.hpp  feature_selection.hpp  file_manager.hpp  metrics.hpp  naive_bayes_classifier.hpp  parser.hpp  tokenizer.hpp  util.hpp
report/: build.sh  report.tex
src/: defs.cpp  doc_preprocessor.cpp  file_manager.cpp  main_classifier.cpp  main_construct_datasets.cpp  main_traintest.cpp  parser.cpp  porter_stemmer.cpp  tokenizer.cpp  util.cpp
